--- a/styles/_section-cover.scss
+++ b/styles/_section-cover.scss
@@ -24,6 +24,7 @@
     height: rem(600 - 46);
     display: flex;
     flex-direction: column;
+
     @include media(tablet) {
       width: rem(510);
       height: rem(482 - 46);
@@ -72,7 +73,10 @@
 
     @include media(mobile) {
       margin-top: rem(32);
+      width: 100%;
     }
+
+    
   }
 
   .cta {
